--- a/Projects/ProductInventory/rarejackalope/inventory/view/ProductView.fxml
+++ b/Projects/ProductInventory/rarejackalope/inventory/view/ProductView.fxml
@@ -10,8 +10,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.111">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rarejackalope.inventory.view.ProductViewController">
    <children>
       <SplitPane dividerPositions="0.907035175879397" orientation="VERTICAL" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
@@ -21,10 +20,10 @@
                     <items>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                            <children>
-                              <TableView layoutX="-25.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="398.0" prefWidth="175.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                              <TableView fx:id="productTable" layoutX="-25.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="398.0" prefWidth="175.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                 <columns>
-                                  <TableColumn prefWidth="75.0" text="Product" />
-                                  <TableColumn prefWidth="75.0" text="Avaliablity" />
+                                  <TableColumn fx:id="productNameColumn" prefWidth="75.0" text="Product" />
+                                  <TableColumn fx:id="productAvaliabilityColumn" prefWidth="75.0" text="Avaliablity" />
                                 </columns>
                                  <columnResizePolicy>
                                     <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -52,12 +51,12 @@
                                     <Label text="Price per unit" GridPane.rowIndex="1" />
                                     <Label text="Product ID" GridPane.rowIndex="2" />
                                     <Label text="Units Avaliable" GridPane.rowIndex="3" />
-                                    <Label text="Label" GridPane.columnIndex="1" />
-                                    <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                                    <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                                    <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                                    <Label text="Current Stock Value" GridPane.rowIndex="4" />
-                                    <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                                    <Label fx:id="productNameLabel" text="Label" GridPane.columnIndex="1" />
+                                    <Label fx:id="pricePerUnitLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                    <Label fx:id="productIdLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                    <Label fx:id="unitsAvaliableLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                    <Label text="Total Stock Value" GridPane.rowIndex="4" />
+                                    <Label fx:id="currentStockValueLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                                  </children>
                                  <padding>
                                     <Insets left="5.0" right="5.0" />
