--- a/Projects/ProductInventory/rarejackalope/inventory/view/ProductView.fxml
+++ b/Projects/ProductInventory/rarejackalope/inventory/view/ProductView.fxml
@@ -9,6 +9,7 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rarejackalope.inventory.view.ProductViewController">
    <children>
@@ -33,7 +34,10 @@
                         </AnchorPane>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                            <children>
-                              <Label layoutX="14.0" layoutY="6.0" text="Label" />
+                              <Label fx:id="mainProductTitleLabel" layoutY="6.0" text="Label">
+                                 <font>
+                                    <Font name="Century" size="18.0" />
+                                 </font></Label>
                               <GridPane hgap="5.0" layoutY="114.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="314.0" prefWidth="316.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                                 <columnConstraints>
                                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="162.0" minWidth="10.0" prefWidth="146.0" />
