FXML changes to hook up the total value of inventory to the relevant label and view.
Would have preferred if this could have been separated into a separate
controller. However I could not discover if its better design to have
two controllers for a single view.

--- a/Projects/ProductInventory/rarejackalope/inventory/view/ProductView.fxml
+++ b/Projects/ProductInventory/rarejackalope/inventory/view/ProductView.fxml
@@ -75,7 +75,7 @@
           <AnchorPane minHeight="30.0" minWidth="25.0" prefHeight="100.0" prefWidth="160.0">
                <children>
                   <Label layoutX="14.0" layoutY="9.0" text="Current Stock Value" />
-                  <Label layoutX="134.0" layoutY="9.0" text="Label" />
+                  <Label fx:id="totalProductValue" layoutX="134.0" layoutY="9.0" text="Label" />
                </children>
             </AnchorPane>
         </items>
